--- a/main.css
+++ b/main.css
@@ -83,14 +83,21 @@ body {
 .page__input {
     width: 100%;
     height: 35px;
+    border-radius: 2px;
+    border: 1px solid gainsboro; 
 }
 .page__button {
     width: 100px;
-    padding: 10px 15px;
+    margin-right: 15px;
+    padding: 10px 16px;
+    background-color: #5181b8;
+    color: white;
+    border: 0px;
+    border-radius: 3px;
 }
 
 .form_row {
-    margin: 10px 0px;
+    margin: 0px 0px 20px 0px;
 }
 
 .footer {
