--- a/css/main.css
+++ b/css/main.css
@@ -195,12 +195,13 @@ body {
 }
 
 /* Mobile devices */
-@media (max-width: 480px) {
+@media only screen and (max-width: 540px) {
     .main {
         display: none;
     }
     .wrapper-header {
         max-width: 320px;
+        justify-content: center;
     }
     .navbar__logo {
         align-self: f
@@ -229,6 +230,99 @@ body {
     }
     .footer {
         max-width: 320px;
+        margin: 10px auto;
+    }
+}
+
+/* teblet devices */
+@media only screen and  (min-width: 540px) {
+    .main {
+        display: none;
+    }
+    .wrapper-header {
+        max-width: 550px;
+        justify-content: center;
+    }
+    .navbar__logo {
+        align-self: f
+    }
+    .navbar__search {
+        display: none;
+    }
+    .navbar__menu {
+        display: none;
+    }
+    .wrapper {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .sidebar {
+        width: 100%;
+    }
+    .sidebar__block {
+        max-width: 550px;
+        margin: 20px auto;
+        box-sizing: border-box;
+    }
+    .form-input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .form-select{
+        width: 30%;
+    }
+    .form-button{
+        width: 245px;
+        margin: 0px 68.5px 0px 0px;
+    }
+    .footer {
+        max-width: 550px;
+        margin: 10px auto;
+    }
+}
+
+/* PC devices */
+@media (min-width: 880px) {
+    
+    
+    .content{
+        max-width: 960px;
+    }
+    .main {
+        display: block;
+    }
+    .wrapper-header {
+        justify-content:space-between;
+        max-width: 960px;
+    }
+    .navbar__logo {
+        align-self: f
+    }
+    .navbar__search {
+        display: flex;
+    }
+    .navbar__menu {
+        display: flex;
+    }
+    .wrapper {
+        width: 960px;
+        height: 100%;
+        margin: auto;
+    }
+    .sidebar {
+        width: 320px;
+    }
+    .sidebar__block {
+        max-width: 960px;
+        margin: 20px auto;
+        box-sizing: border-box;
+    }
+    .form-input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .footer {
+        max-width: 960px;
         margin: 10px auto;
     }
 }
