--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ body {
 }
 
 /* Mobile devices */
-@media (max-width: 480px) {
+@media (max-width: 480px) and (min-width: 320px){
     .main {
         display: none;
     }
@@ -231,4 +231,12 @@ body {
         max-width: 320px;
         margin: 10px auto;
     }
+}
+
+@media (min-width: 768px) and (max-width:1024px){
+
+}
+
+@media (min-width: 1280px){
+
 }
