--- a/css/main.css
+++ b/css/main.css
@@ -3,45 +3,52 @@ body {
     background-color: #edeef0;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-
 }
+
 .wrapper {
     width: 960px;
     margin: auto;
 }
+
 .page-link {
     color: #2a5885;
     text-decoration: none;
 }
 
+
 /* Forms */
+
 .form-row {
     margin: 0px 0px 10px 0px;
 }
+
 .form-fieldset {
     border: 0;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
 }
+
 .form-legend {
     color: gray;
-    background-color: red;
 }
+
 .form-input {
     width: 100%;
     height: 35px;
     border-radius: 2px;
-    border: 1px solid gainsboro; 
+    border: 1px solid gainsboro;
     padding-left: 10px;
 }
+
 .form-select {
     height: 35px;
     border-radius: 2px;
-    border: 1px solid gainsboro; 
+    border: 1px solid gainsboro;
     padding-left: 10px;
     color: gray;
 }
+
 .form-button {
     width: 100px;
     margin-right: 15px;
@@ -52,43 +59,52 @@ body {
     border-radius: 3px;
 }
 
+
 /* Page blocks */
+
 .content {
     display: flex;
     justify-content: space-between;
 }
+
 .main {
     width: 620px;
     min-height: 700px;
     margin-right: 10px;
-    
 }
 
+
 /* Header */
+
 .wrapper-header {
     width: 960px;
     height: 100%;
     margin: auto;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
 }
+
 .navbar {
     height: 48px;
     margin-bottom: 10px;
     background-color: #fff;
 }
+
 .navbar__logo {
     max-width: 200px;
 }
+
 .navbar__left {
     display: flex;
     align-items: center;
 }
+
 .navbar__search {
     display: inline-block;
     margin-left: 30px;
 }
+
 .navbar__search-input {
     background-color: #edeef0;
     border: 0;
@@ -98,9 +114,11 @@ body {
     height: 32px;
     padding-left: 30px;
 }
+
 .navbar__search-input:focus {
     box-shadow: 0px 3px rgba(0, 0, 0, .1);
 }
+
 .navbar__menu-link {
     display: block;
     line-height: 48px;
@@ -111,92 +129,115 @@ body {
     font-size: 14px;
     padding: 0px 10px;
 }
+
 .navbar__menu-link:hover {
     background-color: #f5f6f8;
 }
 
+
 /* Main */
+
 .main__heading {
     font-size: 22px;
     text-align: center;
 }
+
 .main__intro {
     font-size: 14px;
     text-align: center;
     padding: 0px 20px;
     color: gray;
 }
+
 .main__images {
     display: flex;
     justify-content: center;
 }
+
 .main__images-left {
     margin-left: 20px;
-
 }
+
 .main__images-right {
     margin-left: -20px;
 }
+
 .main__links {
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
+
 .main__links-item {
     margin: 0px 28px;
 }
+
 .main__links-more {
     text-align: center;
     margin-top: 20px;
 }
 
+
 /* Sidebar */
+
 .sidebar {
     width: 320px;
 }
-.sidebar__block{
+
+.sidebar__block {
     background-color: #fff;
     padding: 30px;
     margin-bottom: 20px;
     border-radius: 3px;
 }
+
 .sidebar__form-login .form-row:last-child {
     margin-bottom: 0px;
 }
+
 .sidebar__heading {
     margin: 0px;
     text-align: center;
     font-size: 21px;
     font-weight: normal;
 }
+
 .sidebar__subheading {
     color: gray;
     text-align: center;
     margin: 0;
 }
+
 .sidebar__form-login-buttons .form-button {
     width: 100%;
     margin-bottom: 10px;
 }
+
 .sidebar__form-login-buttons {
     display: flex;
     flex-direction: column;
 }
+
 .sidebar__form-reg-button {
     background-color: #4bb34b;
 }
+
 .sidebar__form-login-button {
     background-color: #1b6dd1;
 }
 
+
 /* Footer */
+
 .footer {
     height: 20px;
     color: gray;
 }
 
-/* Mobile devices */
-@media (max-width: 480px) {
+
+/* Small mobile devices */
+
+@media (max-width: 600px) {
     .main {
         display: none;
     }
@@ -231,5 +272,116 @@ body {
     .footer {
         max-width: 320px;
         margin: 10px auto;
+    }
+}
+
+
+/*Large mobile devices and tablets*/
+
+@media only screen and (min-width: 600px) and (max-width:800px) {
+    .main {
+        display: none;
+    }
+    .sidebar {
+        width: 100%;
+    }
+    .sidebar__block {
+        max-width: 550px;
+        margin: 20px auto;
+        box-sizing: border-box;
+    }
+    .form-input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .form-select {
+        width: 30%;
+    }
+    .form-button {
+        width: 245px;
+        margin: 0px 68.5px 0px 0px;
+    }
+    .footer {
+        max-width: 550px;
+        margin: 10px auto;
+    }
+    .wrapper-header {
+        max-width: 550px;
+        justify-content: center;
+    }
+    .navbar__logo {
+        align-self: f
+    }
+    .navbar__search {
+        display: none;
+    }
+    .navbar__menu {
+        display: none;
+    }
+    .wrapper {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+
+/*Big Tablets*/
+
+@media only screen and (min-width: 800px) and (max-width: 1000px) {
+    body {
+        max-width: 100%;
+    }
+    .wrapper {
+        max-width: 100%;
+        margin: auto;
+    }
+    .wrapper-header {
+        padding: 0px 20px;
+    }
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+    }
+    .navbar__menu-link {
+        font-size: 100%;
+        line-height: 0px;
+        height: 50%;
+        padding-left: 40px;
+        padding-right: 0px;
+    }
+}
+
+.content {
+    justify-content: space-around;
+}
+
+.main {
+    width: 40%;
+}
+
+.main__heading {
+    font-size: 20px;
+    text-align: center;
+}
+
+.main__intro {
+    font-size: 15px;
+    text-align: center;
+    padding: 0px 20px;
+}
+
+.main__images-left {
+    margin-left: 20px;
+    width: 50%;
+}
+
+.main__images-right {
+    margin-left: -20px;
+    width: 50%;
+}
+
+@media only screen and (min-width: 1200px) {
+    .navbar {
+        background: red;
     }
 }
