--- a/css/main.css
+++ b/css/main.css
@@ -231,4 +231,44 @@ body {
         max-width: 320px;
         margin: 10px auto;
     }
+    
+   /* tablet */
+    @media only screen and  (min-width: 768px) {
+        .main {
+            display: none;
+        }
+        .wrapper-header {
+            max-width: 500px;
+            justify-content: center;
+        }
+        .navbar__logo {
+            align-self: f
+        }
+        .navbar__search {
+            display: none;
+        }
+        .navbar__menu {
+            display: none;
+        }
+        .wrapper {
+            width: 100%;
+            margin: 0 auto;
+        }
+        .sidebar {
+            width: 100%;
+        }
+        .sidebar__block {
+            max-width: 500px;
+            margin: 20px auto;
+            box-sizing: border-box;
+        }
+        .form-input {
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .footer {
+            max-width: 500px;
+            margin: 10px auto;
+        }
+    }
 }
