--- a/css/main.css
+++ b/css/main.css
@@ -231,4 +231,54 @@ body {
         max-width: 320px;
         margin: 10px auto;
     }
+    /*tablet devices*/
+    @media (min-width:768px) and (max-width:1024px) {
+        .main{
+            display: none;
+        }
+        .sidebar {
+            width: 100%;
+        }
+        .sidebar__block {
+            max-width: 550px;
+            margin: 20px auto;
+            box-sizing: border-box;
+        }
+        .navbar__logo {
+            align-self: f
+        }
+        .navbar__search {
+            display: none;
+        }
+        .navbar__menu {
+            display: none;
+        }
+        .wrapper-header {
+            max-width: 550px;
+            justify-content: center;
+        }
+        .wrapper {
+            width: 100%;
+            margin: 0 auto;
+        }   
+        .sidebar {
+            width: 100%;
+        }
+        .sidebar__block {
+            max-width: 550px;
+            margin: 20px auto;
+            box-sizing: border-box;
+        }
+        .form-input {
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .form-select{
+            width: 30%;
+            }
+        .footer {
+            max-width: 550px;
+            margin: 10px auto;
+        }
+    }
 }
