--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,14 @@ body {
     border: 1px solid gainsboro; 
     padding-left: 10px;
 }
+.form-input-empty {
+    width: 100%;
+    height: 35px;
+    border-radius: 2px;
+    border: 1px solid gainsboro; 
+    padding-left: 10px;
+    background-color: #f15c64;
+}
 .form-select {
     height: 35px;
     border-radius: 2px;
